test/cases/compile_errors/zon/large_number.zon
36893488147419103232
